code/kubernetes/networkpolicy/netpol.yaml
#We have deployed a new pod called secure-pod and a service called secure-service. Incoming or Outgoing connections to this pod are not working.
#Troubleshoot why this is happening.
#Make sure that incoming connection from the pod webapp-color are successful.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
spec:
  podSelector:
    matchLabels:
      run: secure-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: webapp-color
    ports:
      - port: 80
